--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -9,4 +9,46 @@
   <% if @post_image.user == current_user %>
   <%= link_to "削除", post_image_path(@post_image), method: :delete %>
   <% end %>
+  
+  <!--いいね-->
+  <!--投稿画像に付けられた「いいね」に、
+   自分（ログインしているユーザ）が含まれているかをfavorited_by?メソッドで判定(modelにも実装)-->
+  <!--「含まれるとき／含まれないとき」で、表示と機能を分ける。-->
+  <% if @post_image.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
+        ♥<%= @post_image.favorites.count %> いいね
+      <% end %> <!--すでに押してるんやったらこのクリックは消すの意味やで-->
+    </p>
+    <% else %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+        ♡<%= @post_image.favorites.count %> いいね
+      <% end %> <!--押されてないんやったらこのクリックはええでの意味やで-->
+    </p>
+  <% end %>
+</div>
+
+<!--投稿画像の詳細画面でコメントを投稿できるようにする-->
+<div>
+  <p>コメント件数：<%=@post_image.post_comments.count %></p> <!--投稿画像へのコメント、コメント数も表示-->
+  <% @post_image.post_comments.each do |post_comment| %>
+  <%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <!--削除ボタンを表示-->
+  <% if post_comment.user == current_user %>
+  <div>
+    <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+  </div>
+  <% end %>
+ <% end %>
+</div>
+
+<!--comment送信用fmt-->
+<div>
+<%= form_with(model:[@post_image, @post_comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
 </div>
