--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,16 +1,2 @@
-<% @post_images.each do |post_image| %>
-<div>
-  <%= link_to post_image_path(post_image.id) do %>
-  
-  <%= attachment_image_tag post_image, :image %>
-<% end %>
-
-  <p>投稿ユーザー画像：<%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %><!--プロフィール画像が反映
-  <p>ショップ名：<%= post_image.shop_name %></p>
-  <p>説明：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
-  <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p> <!--コメント件数を表示する記述-->
-</div>
-<% end %>
-
-<%= paginate @post_images %>
+<!--部分テンプレート呼び出し-->
+<%= render 'post_images/list', post_images: @post_images %>
