--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,19 +1,29 @@
+<div class="card-list-container py-5">
 <!--部分テンプレートが呼び出しのための変数（ローカル変数)-->
-<% post_images.each do |post_image| %>  <!-- @post_images → post_images -->
-
-
-<div>
-  <%= link_to post_image_path(post_image.id) do %>
-  
-  <%= attachment_image_tag post_image, :image %>
-<% end %>
-
-  <p>投稿ユーザー画像：<%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %><!--プロフィール画像が反映-->
-  <p>ショップ名：<%= post_image.shop_name %></p>
-  <p>説明：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
-  <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p> <!--コメント件数を表示する記述-->
-</div>
-<% end %>
-
-<%= paginate post_images %><!-- @post_images → post_images 部分テンプレート-->
+  <% post_images.each do |post_image| %><!-- @post_images → post_images -->
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%= link_to post_image_path(post_image.id) do %>
+      <%= attachment_image_tag post_image, :image, class:"card-img-top"; %>
+    <% end %>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+          <!--プロフィール画像反映-->
+        </div>
+        <div class="col-10">
+          <p class="card-title">
+            <%= link_to(post_image_path(post_image.id), class:"text-dark") do %>
+              <strong><i class="far fa-flag"></i><span> <%= post_image.shop_name %></span></strong>
+            <% end %>
+          </p>
+          <p class="card-text">説明：<%= post_image.caption %></p>
+          <span><i class="fas fa-user"></i> By <%= post_image.user.name %> ｜ </span>
+          <span><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class:"text-dark" %></span>
+          <!--コメント件数表示-->
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <%= paginate post_images %>
